# cobik

./: .gitignore  BUGFIX_SUMMARY.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  full_build_log.txt
docs/: cubase_level_roadmap.md
src/app/: AppState.cpp  AppState.h  Main.cpp  MainWindow.cpp  MainWindow.h
src/core/ai/: AIGenerator.cpp  AIGenerator.h  CommandInterpreter.cpp  CommandInterpreter.h  LLMClient.cpp  LLMClient.h  MusicTheory.h
src/core/audio/: AudioEngine.cpp  AudioEngine.h  MidiRecorder.cpp  MidiRecorder.h
src/core/edit/: EditCommands.h  UndoStack.h
src/core/model/: CC.h  Clip.cpp  Clip.h  Note.h  Project.cpp  Project.h  Track.h
src/core/quantize/: QuantizeEngine.cpp  QuantizeEngine.h
src/core/timeline/: PPQ.h  Timeline.h  Transport.cpp  Transport.h
src/ui/: MainComponent.cpp  MainComponent.h
src/ui/arrangement/: ArrangementView.cpp  ArrangementView.h  TrackListPanel.cpp  TrackListPanel.h
src/ui/editor/: InfoLine.h  InspectorPanel.h  PianoRollToolbar.h  StatusLine.h
src/ui/panels/: DebugLogWindow.cpp  DebugLogWindow.h  PluginEditorWindow.h  PromptBar.cpp  PromptBar.h  QuantizePanel.cpp  QuantizePanel.h  TheoryToolbar.h  VstBrowserPanel.cpp  VstBrowserPanel.h
src/ui/pianoroll/: PedalLane.cpp  PedalLane.h  PianoRollView.cpp  PianoRollView.h  VelocityLane.cpp  VelocityLane.h
src/ui/transport/: TransportBar.cpp  TransportBar.h
tests/: CMakeLists.txt
tests/core/: PPQTests.cpp
